[small fix] mathbb{v} -> mathrm{v}

--- a/collision_equation/collision_equation.tex
+++ b/collision_equation/collision_equation.tex
@@ -224,9 +224,9 @@ $y$方向について
 そこで,衝突の条件を考える.
 弾性係数を$e$とすると,
 質量が0といっても端点での速度がこの弾性係数に従う.
-端点での速度$\mathbb{v}_c (\text{cはcollisionのc})$は
+端点での速度$\mathrm{v}_c (\text{cはcollisionのc})$は
 \begin{gather}
-  \mathbb{v}_c = \begin{pmatrix}
+  \mathrm{v}_c = \begin{pmatrix}
     v_x
     \\
     v_y
@@ -236,7 +236,7 @@ $y$方向について
 これらが2成分持つことによって残りの2方程式が導かれる.
 例えば$x,y$方向のどちらにおいても弾性係数が0の場合は
 \begin{gather*}
-  \mathbb{v}_c^a = \begin{pmatrix}
+  \mathrm{v}_c^a = \begin{pmatrix}
     v_x^a
     \\
     v_y^a
